# python-project-83

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml  ssh_key  ssh_key.pub
.env/: pyvenv.cfg
.github/workflows/: project-check.yml
html/: index copy.html  index.html
page_analyzer/: .env  __init__.py  app.py  db.py  functions.py
page_analyzer/templates/: 404.html  500.html  base.html  index.html  message.html  url.html  url_id.html  urls.html
